# Sparrow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shader/: a.frag  a.vert
doc/: README.md
include/: README.md  appactionInterface.h  basicsInterface.h  file.h  shaderGLSL.h  shaderProgramGLSL.h  windowInterface.h
src/: README.md  appactionInterface.cpp  file.cpp  shaderGLSL.cpp  shaderProgramGLSL.cpp  windowInterface.cpp
test/framework_test/: CMakeLists.txt
test/framework_test/include/: appaction.h  window.h
test/framework_test/src/: appaction.cpp  mian.cpp  window.cpp
test/init_test/: CMakeLists.txt  README.md  main.cpp
viscera/data/include/: json.h
viscera/imemory/: README.md  object.hpp
viscera/imemory/achieve/: gc.inl  gcWorker.inl  object.inl
viscera/tools/: log.hpp  md5.hpp  strExt.hpp  thread.hpp
viscera/tools/achieve/: log.inl  md5.inl  strExt.inl  thread.inl
